--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookstate/core": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.1"
   },
@@ -25,6 +26,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "vite": "^5.0.12"
   }
 }
